--- a/.github/workflows/tenkai-build-training.yml
+++ b/.github/workflows/tenkai-build-training.yml
@@ -10,7 +10,7 @@ on:
         description: '場コード pid (例: 02)'
         required: true
       race:
-        description: 'レース (例: 2R) 空なら全R'
+        description: 'レース (例: 2R) 空 or ALL で全R'
         required: false
         default: ''
 
@@ -25,9 +25,11 @@ jobs:
   build-train:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
@@ -35,6 +37,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pandas
+
+      - name: Sanity check
+        run: |
+          test -f TENKAI/build_training_table.py || { echo "TENKAI/build_training_table.py がありません"; exit 1; }
 
       - name: Ensure TENKAI package
         run: |
@@ -44,28 +50,44 @@ jobs:
       - name: Build training table
         shell: bash
         run: |
-          set -eo pipefail
-          RACE_OPT=""
-          if [ -n "${{ github.event.inputs.race }}" ]; then
-            RACE_OPT="--race ${{ github.event.inputs.race }}"
+          set -euo pipefail
+          RACE_IN="${{ github.event.inputs.race }}"
+          # 空 or "ALL" は全R扱い
+          if [ -z "${RACE_IN}" ] || [ "${RACE_IN}" = "ALL" ]; then
+            echo ">>> race: ALL (1R..12R を処理)"
+            RACE_OPT=""
+          else
+            echo ">>> race: ${RACE_IN}"
+            RACE_OPT="--race ${RACE_IN}"
           fi
-          echo "python TENKAI/build_training_table.py --date ${{ github.event.inputs.date }} --pid ${{ github.event.inputs.pid }} $RACE_OPT"
+          echo ">>> cmd:"
+          echo PYTHONPATH=. python TENKAI/build_training_table.py --date ${{ github.event.inputs.date }} --pid ${{ github.event.inputs.pid }} ${RACE_OPT}
           PYTHONPATH="." python TENKAI/build_training_table.py \
             --date ${{ github.event.inputs.date }} \
             --pid  ${{ github.event.inputs.pid }} \
-            $RACE_OPT
+            ${RACE_OPT}
 
       - name: Commit outputs
+        shell: bash
         run: |
-          git config user.name  "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add TENKAI/datasets/v1/** || true
-          git diff --cached --quiet || git commit -m "TENKAI training: ${{ github.event.inputs.date }} pid=${{ github.event.inputs.pid }} ${{ github.event.inputs.race }}"
-          git push
+          set -euo pipefail
+          OUTDIR="TENKAI/datasets/v1/${{ github.event.inputs.date }}/${{ github.event.inputs.pid }}"
+          echo ">>> OUTDIR=${OUTDIR}"
+          if [ -d "${OUTDIR}" ]; then
+            git config user.name  "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git fetch origin
+            git pull --rebase origin "${GITHUB_REF_NAME:-main}" || true
+            git add "${OUTDIR}"/** || true
+            git diff --cached --quiet || git commit -m "TENKAI training: ${{ github.event.inputs.date }} pid=${{ github.event.inputs.pid }} ${{ github.event.inputs.race }}"
+            git push || true
+          else
+            echo "OUTDIR not found, nothing to commit."
+          fi
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: tenkai-train-${{ github.event.inputs.date }}-${{ github.event.inputs.pid }}${{ github.event.inputs.race && format('-{0}', github.event.inputs.race) || '' }}
-          path: TENKAI/datasets/v1/**
+          path: TENKAI/datasets/v1/${{ github.event.inputs.date }}/${{ github.event.inputs.pid }}/**
           if-no-files-found: warn
