--- a/.github/workflows/tenkai-build-training.yml
+++ b/.github/workflows/tenkai-build-training.yml
@@ -7,7 +7,7 @@ on:
         description: '対象日 (YYYYMMDD)'
         required: true
       pid:
-        description: '場コード pid (例: 02)'
+        description: '場コード pid (例: 02) / ALL で全場'
         required: true
       race:
         description: 'レース (例: 2R) 空/ALL なら全R'
@@ -24,13 +24,10 @@ concurrency:
 jobs:
   build-train:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
@@ -44,54 +41,74 @@ jobs:
           mkdir -p TENKAI
           [ -f TENKAI/__init__.py ] || printf "" > TENKAI/__init__.py
 
-      - name: Build training table
+      - name: Build training table (supports pid=ALL)
         shell: bash
         run: |
           set -euo pipefail
           DATE="${{ github.event.inputs.date }}"
-          PID="${{ github.event.inputs.pid }}"
-          RACE="${{ github.event.inputs.race }}"
+          PID_IN="${{ github.event.inputs.pid }}"
+          RACE_IN="${{ github.event.inputs.race }}"
           RACE_OPT=""
-          if [ -n "${RACE}" ] && [ "${RACE}" != "ALL" ]; then
-            RACE_OPT="--race ${RACE}"
+          if [ -n "${RACE_IN}" ] && [ "${RACE_IN}" != "ALL" ]; then
+            RACE_OPT="--race ${RACE_IN}"
           fi
 
-          echo ">>> run: python TENKAI/build_training_table.py --date ${DATE} --pid ${PID} ${RACE_OPT}"
-          PYTHONPATH="." python TENKAI/build_training_table.py --date "${DATE}" --pid "${PID}" ${RACE_OPT}
+          # pid=ALL の展開（features_c か labels のどちらかにある pid を採用）
+          if [ "${PID_IN}" = "ALL" ]; then
+            echo ">>> pid=ALL: detect pids for date=${DATE}"
+            mapfile -t PIDS < <(ls -1d TENKAI/features_c/v1/${DATE}/* 2>/dev/null | xargs -n1 basename || true)
+            if [ ${#PIDS[@]} -eq 0 ]; then
+              mapfile -t PIDS < <(ls -1d TENKAI/labels/v1/${DATE}/* 2>/dev/null | xargs -n1 basename || true)
+            fi
+          else
+            PIDS=("${PID_IN}")
+          fi
+
+          if [ ${#PIDS[@]} -eq 0 ]; then
+            echo "no pid found for ${DATE}"
+            exit 0
+          fi
+
+          echo ">>> targets: ${PIDS[*]}"
+          for PID in "${PIDS[@]}"; do
+            echo ">>> run: python TENKAI/build_training_table.py --date ${DATE} --pid ${PID} ${RACE_OPT}"
+            PYTHONPATH="." python TENKAI/build_training_table.py --date "${DATE}" --pid "${PID}" ${RACE_OPT} || true
+          done
 
       - name: Commit outputs
         shell: bash
         run: |
           set -euo pipefail
           DATE="${{ github.event.inputs.date }}"
-          PID="${{ github.event.inputs.pid }}"
-          RACE="${{ github.event.inputs.race }}"
+          PID_IN="${{ github.event.inputs.pid }}"
+          RACE_IN="${{ github.event.inputs.race }}"
 
-          # ALL/空 なら pid配下全体、それ以外は特定レースのファイルのみ
-          if [ -z "${RACE}" ] || [ "${RACE}" = "ALL" ]; then
-            OUTDIR="TENKAI/datasets/v1/${DATE}/${PID}"
+          if [ "${PID_IN}" = "ALL" ]; then
+            ADD_PATH="TENKAI/datasets/v1/${DATE}/**"
           else
-            OUTDIR="TENKAI/datasets/v1/${DATE}/${PID}/${RACE}"
+            if [ -z "${RACE_IN}" ] || [ "${RACE_IN}" = "ALL" ]; then
+              ADD_PATH="TENKAI/datasets/v1/${DATE}/${PID_IN}/**"
+            else
+              ADD_PATH="TENKAI/datasets/v1/${DATE}/${PID_IN}/${RACE_IN}*"
+            fi
           fi
+          echo ">>> git add ${ADD_PATH}"
 
-          echo ">>> OUTDIR=${OUTDIR}"
-          if [ -d "${OUTDIR}" ]; then
-            git config user.name  "github-actions[bot]"
-            git config user.email "github-actions[bot]@users.noreply.github.com"
-            git fetch origin
-            git pull --rebase origin "${GITHUB_REF_NAME:-main}" || true
-            git add "${OUTDIR}"/** || true
-            git diff --cached --quiet || git commit -m "TENKAI training: ${DATE} pid=${PID} ${RACE}"
-            git push || true
-          else
-            echo "OUTDIR not found, nothing to commit."
-          fi
+          git config user.name  "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git fetch origin
+          git pull --rebase origin "${GITHUB_REF_NAME:-main}" || true
+          git add ${ADD_PATH} || true
+          git diff --cached --quiet || git commit -m "TENKAI training: ${DATE} pid=${PID_IN} race=${RACE_IN}"
+          git push || true
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: tenkai-train-${{ github.event.inputs.date }}-${{ github.event.inputs.pid }}${{ github.event.inputs.race && format('-{0}', github.event.inputs.race) || '' }}
-          path: ${{ (github.event.inputs.race == '' || github.event.inputs.race == 'ALL')
-                    && format('TENKAI/datasets/v1/{0}/{1}/**', github.event.inputs.date, github.event.inputs.pid)
-                    || format('TENKAI/datasets/v1/{0}/{1}/{2}/**', github.event.inputs.date, github.event.inputs.pid, github.event.inputs.race) }}
+          path: ${{ (github.event.inputs.pid == 'ALL')
+                    && format('TENKAI/datasets/v1/{0}/**', github.event.inputs.date)
+                    || ((github.event.inputs.race == '' || github.event.inputs.race == 'ALL')
+                          && format('TENKAI/datasets/v1/{0}/{1}/**', github.event.inputs.date, github.event.inputs.pid)
+                          || format('TENKAI/datasets/v1/{0}/{1}/{2}*', github.event.inputs.date, github.event.inputs.pid, github.event.inputs.race)) }}
           if-no-files-found: warn
