--- a/.github/workflows/tenkai-train-model.yml
+++ b/.github/workflows/tenkai-train-model.yml
@@ -7,10 +7,11 @@ on:
         description: '対象日 (YYYYMMDD)'
         required: true
       pid:
-        description: '場コード pid (例: 02)'
-        required: true
+        description: '場コード pid (例: 02 空=ALL場まとめ)'
+        required: false
+        default: ''
       race:
-        description: 'レース (例: 1R) 空なら ALL（pid配下まとめ）'
+        description: 'レース (例: 1R 空=ALL)'
         required: false
         default: ''
 
@@ -22,61 +23,55 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  train:
+  train-win:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install pandas scikit-learn numpy joblib
+          pip install pandas scikit-learn joblib
 
-      - name: Ensure TENKAI package dir
+      - name: Ensure TENKAI package
         run: |
           mkdir -p TENKAI
           [ -f TENKAI/__init__.py ] || printf "" > TENKAI/__init__.py
 
-      - name: Train model
+      - name: Train model (pid/race 空=ALL対応)
         shell: bash
         run: |
           set -euo pipefail
+          PID_OPT=""
           RACE_OPT=""
+          if [ -n "${{ github.event.inputs.pid }}" ]; then
+            PID_OPT="--pid ${{ github.event.inputs.pid }}"
+          fi
           if [ -n "${{ github.event.inputs.race }}" ]; then
             RACE_OPT="--race ${{ github.event.inputs.race }}"
           fi
-          echo ">>> cmd:"
-          echo PYTHONPATH=. python TENKAI/train_win_model.py --date ${{ github.event.inputs.date }} --pid ${{ github.event.inputs.pid }} $RACE_OPT
-          PYTHONPATH=. python TENKAI/train_win_model.py \
-            --date ${{ github.event.inputs.date }} \
-            --pid  ${{ github.event.inputs.pid }} \
-            $RACE_OPT
+          echo ">>> RUN: python TENKAI/train_win_model.py --date ${{ github.event.inputs.date }} $PID_OPT $RACE_OPT"
+          PYTHONPATH="." python TENKAI/train_win_model.py --date ${{ github.event.inputs.date }} $PID_OPT $RACE_OPT
 
       - name: Commit artifacts
         shell: bash
         run: |
           set -euo pipefail
-          OUT="TENKAI/models/v1/${{ github.event.inputs.date }}/${{ github.event.inputs.pid }}/${{ github.event.inputs.race || 'ALL' }}"
-          echo "OUTDIR=$OUT"
-          if [ -d "$OUT" ]; then
-            git config user.name  "github-actions[bot]"
-            git config user.email "github-actions[bot]@users.noreply.github.com"
-            git fetch origin
-            git pull --rebase origin "${GITHUB_REF_NAME:-main}" || true
-            git add "$OUT"/** || true
-            git diff --cached --quiet || git commit -m "TENKAI model: ${{ github.event.inputs.date }} pid=${{ github.event.inputs.pid }} ${{ github.event.inputs.race }}"
-            git push || true
-          else
-            echo "no outputs to commit"
-          fi
+          git config user.name  "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add TENKAI/models/v1/** || true
+          git diff --cached --quiet || git commit -m "TENKAI model: ${{ github.event.inputs.date }} pid=${{ github.event.inputs.pid || 'ALL' }} race=${{ github.event.inputs.race || 'ALL' }}"
+          git push || true
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: tenkai-model-${{ github.event.inputs.date }}-${{ github.event.inputs.pid }}${{ github.event.inputs.race && format('-{0}', github.event.inputs.race) || '-ALL' }}
-          path: TENKAI/models/v1/${{ github.event.inputs.date }}/${{ github.event.inputs.pid }}/${{ github.event.inputs.race || 'ALL' }}/**
+          name: tenkai-model-${{ github.event.inputs.date }}-${{ github.event.inputs.pid && github.event.inputs.pid || 'ALL' }}-${{ github.event.inputs.race && github.event.inputs.race || 'ALL' }}
+          path: TENKAI/models/v1/**
           if-no-files-found: warn
