--- a/.github/workflows/tenkai_predict.yml
+++ b/.github/workflows/tenkai_predict.yml
@@ -13,10 +13,6 @@ on:
         description: 'レース (例: 9R) 空なら1R..12R全部'
         required: false
         default: ''
-      model_date:
-        description: '学習モデルの日付 (空=対象日と同じ)'
-        required: false
-        default: ''
 
 permissions:
   contents: write
@@ -29,54 +25,38 @@ jobs:
   predict:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with: { python-version: '3.11' }
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install pandas numpy scikit-learn joblib
-
       - name: Ensure TENKAI package dir
         run: |
           mkdir -p TENKAI
           [ -f TENKAI/__init__.py ] || printf "" > TENKAI/__init__.py
-
-      - name: Run prediction (ALL model)
+      - name: Run prediction (auto-pick latest model)
         shell: bash
         run: |
           set -euo pipefail
           RACE_OPT=""
-          MODEL_OPT=""
           if [ -n "${{ github.event.inputs.race }}" ]; then
             RACE_OPT="--race ${{ github.event.inputs.race }}"
           fi
-          if [ -n "${{ github.event.inputs.model_date }}" ]; then
-            MODEL_OPT="--model_date ${{ github.event.inputs.model_date }}"
-          fi
-
-          echo ">>> cmd:"
           echo PYTHONPATH=. python TENKAI/tenkai_predict_win.py \
                --date ${{ github.event.inputs.date }} \
                --pid  ${{ github.event.inputs.pid }} \
-               $RACE_OPT $MODEL_OPT
-
+               $RACE_OPT
           PYTHONPATH="." python TENKAI/tenkai_predict_win.py \
             --date ${{ github.event.inputs.date }} \
             --pid  ${{ github.event.inputs.pid }} \
-            $RACE_OPT $MODEL_OPT
-
+            $RACE_OPT
       - name: Commit predictions
         shell: bash
         run: |
           set -euo pipefail
           OUTDIR="TENKAI/predictions/v1/${{ github.event.inputs.date }}/${{ github.event.inputs.pid }}"
-          echo ">>> OUTDIR=${OUTDIR}"
           if [ -d "$OUTDIR" ]; then
             git config user.name  "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
@@ -89,7 +69,6 @@ jobs:
           else
             echo "OUTDIR not found, nothing to commit."
           fi
-
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
