--- a/.github/workflows/tenkai-build-training.yml
+++ b/.github/workflows/tenkai-build-training.yml
@@ -41,7 +41,7 @@ jobs:
           mkdir -p TENKAI
           [ -f TENKAI/__init__.py ] || printf "" > TENKAI/__init__.py
 
-      - name: Build training table (supports pid=ALL; outputs tansyo+kimarite)
+      - name: Build training table (supports pid=ALL)
         shell: bash
         run: |
           set -euo pipefail
@@ -72,11 +72,10 @@ jobs:
           echo ">>> targets: ${PIDS[*]}"
           for PID in "${PIDS[@]}"; do
             echo ">>> run: python TENKAI/build_training_table.py --date ${DATE} --pid ${PID} ${RACE_OPT}"
-            # build_training_table.py はデフォルトで --task both（単勝+決まり手）を出力
             PYTHONPATH="." python TENKAI/build_training_table.py --date "${DATE}" --pid "${PID}" ${RACE_OPT} || true
           done
 
-      - name: Commit outputs (tansyo + kimarite)
+      - name: Commit outputs
         shell: bash
         run: |
           set -euo pipefail
@@ -84,50 +83,32 @@ jobs:
           PID_IN="${{ github.event.inputs.pid }}"
           RACE_IN="${{ github.event.inputs.race }}"
 
-          # 追加パス（単勝/決まり手）の両方を用意
           if [ "${PID_IN}" = "ALL" ]; then
-            ADD_PATH1="TENKAI/datasets/v1/${DATE}/**"
-            ADD_PATH2="TENKAI/datasets_kimarite/v1/${DATE}/**"
+            ADD_PATH="TENKAI/datasets/v1/${DATE}/**"
           else
             if [ -z "${RACE_IN}" ] || [ "${RACE_IN}" = "ALL" ]; then
-              ADD_PATH1="TENKAI/datasets/v1/${DATE}/${PID_IN}/**"
-              ADD_PATH2="TENKAI/datasets_kimarite/v1/${DATE}/${PID_IN}/**"
+              ADD_PATH="TENKAI/datasets/v1/${DATE}/${PID_IN}/**"
             else
-              ADD_PATH1="TENKAI/datasets/v1/${DATE}/${PID_IN}/${RACE_IN}*"
-              ADD_PATH2="TENKAI/datasets_kimarite/v1/${DATE}/${PID_IN}/${RACE_IN}*"
+              ADD_PATH="TENKAI/datasets/v1/${DATE}/${PID_IN}/${RACE_IN}*"
             fi
           fi
-          echo ">>> git add:"
-          echo "    ${ADD_PATH1}"
-          echo "    ${ADD_PATH2}"
+          echo ">>> git add ${ADD_PATH}"
 
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git fetch origin
           git pull --rebase origin "${GITHUB_REF_NAME:-main}" || true
-          git add ${ADD_PATH1} || true
-          git add ${ADD_PATH2} || true
-          git diff --cached --quiet || git commit -m "TENKAI training: ${DATE} pid=${PID_IN} race=${RACE_IN} (tansyo+kimarite)"
+          git add ${ADD_PATH} || true
+          git diff --cached --quiet || git commit -m "TENKAI training: ${DATE} pid=${PID_IN} race=${RACE_IN}"
           git push || true
 
-      - name: Upload artifacts (tansyo)
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: tenkai-train-tansyo-${{ github.event.inputs.date }}-${{ github.event.inputs.pid }}${{ github.event.inputs.race && format('-{0}', github.event.inputs.race) || '' }}
+          name: tenkai-train-${{ github.event.inputs.date }}-${{ github.event.inputs.pid }}${{ github.event.inputs.race && format('-{0}', github.event.inputs.race) || '' }}
           path: ${{ (github.event.inputs.pid == 'ALL')
                     && format('TENKAI/datasets/v1/{0}/**', github.event.inputs.date)
                     || ((github.event.inputs.race == '' || github.event.inputs.race == 'ALL')
                           && format('TENKAI/datasets/v1/{0}/{1}/**', github.event.inputs.date, github.event.inputs.pid)
                           || format('TENKAI/datasets/v1/{0}/{1}/{2}*', github.event.inputs.date, github.event.inputs.pid, github.event.inputs.race)) }}
-          if-no-files-found: warn
-
-      - name: Upload artifacts (kimarite)
-        uses: actions/upload-artifact@v4
-        with:
-          name: tenkai-train-kimarite-${{ github.event.inputs.date }}-${{ github.event.inputs.pid }}${{ github.event.inputs.race && format('-{0}', github.event.inputs.race) || '' }}
-          path: ${{ (github.event.inputs.pid == 'ALL')
-                    && format('TENKAI/datasets_kimarite/v1/{0}/**', github.event.inputs.date)
-                    || ((github.event.inputs.race == '' || github.event.inputs.race == 'ALL')
-                          && format('TENKAI/datasets_kimarite/v1/{0}/{1}/**', github.event.inputs.date, github.event.inputs.pid)
-                          || format('TENKAI/datasets_kimarite/v1/{0}/{1}/{2}*', github.event.inputs.date, github.event.inputs.pid, github.event.inputs.race)) }}
           if-no-files-found: warn
