--- a/.github/workflows/train_tenkai_models.yml
+++ b/.github/workflows/train_tenkai_models.yml
@@ -1,113 +1,65 @@
-name: Train TENKAI models (tansyo + kimarite)
+name: Train models (tansyo + kimarite)
 
 on:
   workflow_dispatch:
     inputs:
-      task:
-        description: "学習タスク: tansyo / kimarite / both"
-        required: false
-        default: "both"
       dates:
-        description: "学習対象日(カンマ区切り) or ALL（例: 20250801,20250802 / ALL）"
+        description: "学習対象日(カンマ区切り) or ALL"
         required: false
         default: "ALL"
-      date:
-        description: "モデル保存タグ日（空=自動: --dates最大 or データセット最新）"
-        required: false
-        default: ""
       pid:
-        description: "場コード pid（空=ALL場）"
+        description: "場コード (空=ALL)"
         required: false
         default: ""
       race:
-        description: "レース（空=ALL）"
+        description: "レース (空=ALL)"
         required: false
         default: ""
 
 permissions:
   contents: write
 
-concurrency:
-  group: tenkai-train-models-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
   train-models:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          # both が既定なので lightgbm も入れておく
           pip install pandas scikit-learn joblib lightgbm
 
-      - name: Ensure TENKAI package
+      - name: Ensure package
         run: |
           mkdir -p TENKAI
           [ -f TENKAI/__init__.py ] || printf "" > TENKAI/__init__.py
 
-      - name: Train models
-        shell: bash
+      - name: Train (both by default)
         run: |
-          set -euo pipefail
-          TASK="${{ github.event.inputs.task || 'both' }}"
-          DATES="${{ github.event.inputs.dates || 'ALL' }}"
-          DATE_TAG="${{ github.event.inputs.date || '' }}"
-          PID_OPT=""
-          RACE_OPT=""
-          [ -n "${{ github.event.inputs.pid }}" ]  && PID_OPT="--pid ${{ github.event.inputs.pid }}"
-          [ -n "${{ github.event.inputs.race }}" ] && RACE_OPT="--race ${{ github.event.inputs.race }}"
-          DATE_OPT=""
-          [ -n "${DATE_TAG}" ] && DATE_OPT="--date ${DATE_TAG}"
-
-          echo ">>> RUN: python TENKAI/train_models.py --task ${TASK} --dates ${DATES} ${DATE_OPT} ${PID_OPT} ${RACE_OPT}"
-          PYTHONPATH="." python TENKAI/train_models.py --task "${TASK}" --dates "${DATES}" ${DATE_OPT} ${PID_OPT} ${RACE_OPT}
+          PYTHONPATH="." python TENKAI/train_models.py \
+            --dates "${{ github.event.inputs.dates || 'ALL' }}" \
+            --pid   "${{ github.event.inputs.pid }}" \
+            --race  "${{ github.event.inputs.race }}" \
+            --mode both
 
       - name: Commit artifacts
-        shell: bash
         run: |
-          set -euo pipefail
-          TASK="${{ github.event.inputs.task || 'both' }}"
-
-          ADD_PATHS=()
-          if [ "${TASK}" = "tansyo" ]; then
-            ADD_PATHS+=("TENKAI/models_tansyo/v1/**")
-          elif [ "${TASK}" = "kimarite" ]; then
-            ADD_PATHS+=("TENKAI/models_kimarite/v1/**")
-          else
-            ADD_PATHS+=("TENKAI/models_tansyo/v1/**" "TENKAI/models_kimarite/v1/**")
-          fi
-
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git fetch origin
-          git pull --rebase origin "${GITHUB_REF_NAME:-main}" || true
-          for p in "${ADD_PATHS[@]}"; do
-            git add $p || true
-          done
-          git diff --cached --quiet || git commit -m "TENKAI models: task=${TASK} dates=${{ github.event.inputs.dates || 'AUTO' }} pid=${{ github.event.inputs.pid || 'ALL' }} race=${{ github.event.inputs.race || 'ALL' }}"
+          git add TENKAI/models_tansyo/v1/** TENKAI/models_kimarite/v1/** || true
+          git diff --cached --quiet || git commit -m "models: dates=${{ github.event.inputs.dates || 'AUTO' }} pid=${{ github.event.inputs.pid || 'ALL' }} race=${{ github.event.inputs.race || 'ALL' }}"
           git push || true
 
-      - name: Upload artifact (tansyo models)
-        if: ${{ github.event.inputs.task == '' || github.event.inputs.task == 'both' || github.event.inputs.task == 'tansyo' }}
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: tenkai-models_tansyo-${{ github.event.inputs.dates || 'AUTO' }}-${{ github.event.inputs.pid && github.event.inputs.pid || 'ALL' }}-${{ github.event.inputs.race && github.event.inputs.race || 'ALL' }}
-          path: TENKAI/models_tansyo/v1/**
-          if-no-files-found: warn
-
-      - name: Upload artifact (kimarite models)
-        if: ${{ github.event.inputs.task == '' || github.event.inputs.task == 'both' || github.event.inputs.task == 'kimarite' }}
-        uses: actions/upload-artifact@v4
-        with:
-          name: tenkai-models_kimarite-${{ github.event.inputs.dates || 'AUTO' }}-${{ github.event.inputs.pid && github.event.inputs.pid || 'ALL' }}-${{ github.event.inputs.race && github.event.inputs.race || 'ALL' }}
-          path: TENKAI/models_kimarite/v1/**
+          name: models-${{ github.event.inputs.dates || 'AUTO' }}
+          path: |
+            TENKAI/models_tansyo/v1/**
+            TENKAI/models_kimarite/v1/**
           if-no-files-found: warn
